--- a/docs/about-axon.mdx
+++ b/docs/about-axon.mdx
@@ -2,6 +2,7 @@
 slug: /
 sidebar_position: 1
 ---
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Axon Documentation
 
@@ -10,3 +11,145 @@ Axon is a scalable and interoperable Ethereum blockchain, built on Proof-of-Stak
 ## Getting Started
 
 Read all about Axon or dive straight into the code with guides.
+
+import ImageCard from '@site/src/components/ImageCard';
+
+<div className="row">
+    <div className="col col--6 margin-bottom--lg">
+        <ImageCard
+            title="Developers"
+            light={useBaseUrl('/img/developers_light.svg')}
+            dark={useBaseUrl('/img/developers_dark.svg')}
+            url="https://nervos.org/"
+            description="Find key information about developing on Axon."
+        />
+    </div>
+    <div className="col col--6 margin-bottom--lg">
+        <ImageCard
+            title="Contributers"
+            light={useBaseUrl('/img/contributers_light.svg')}
+            dark={useBaseUrl('/img/contributers_dark.svg')}
+            url="https://nervos.org/"
+            description="Everything you need to know as an Axon contributer."
+        />
+    </div>
+</div>
+
+## Explore Axon
+
+Get familiar with Axon and explore its main concepts.
+
+<div className="row">
+    <div className="col col--6">
+        <ImageCard
+            title="Introduction"
+            light={useBaseUrl('/img/introduction_light.svg')}
+            dark={useBaseUrl('/img/introduction_dark.svg')}
+            url="https://nervos.org/"
+            description="Read a high-level over of Axon and its architecture"
+            imagePosition="right"
+        />
+    </div>
+    <div className="col col--6">
+        <ImageCard
+            title="Basics"
+            light={useBaseUrl('/img/basics_light.svg')}
+            dark={useBaseUrl('/img/basics_dark.svg')}
+            url="https://nervos.org/"
+            description="Start with the basic concepts of Axon，like accounts and transactions"
+            imagePosition="right"
+        />
+    </div>
+</div>
+
+## Explore the stack
+
+Check out the docs for the various parts of the Axon stack
+
+<div className="row">
+    <div className="col col--4">
+        <ImageCard
+            title="Cosmos SDK"
+            light={useBaseUrl('/img/cosmos_light.svg')}
+            dark={useBaseUrl('/img/cosmos_dark.svg')}
+            url="https://nervos.org/"
+            description="The SDK is the world’s most popular framework for building application-specific blockchains."
+            imagePosition="top"
+        />
+    </div>
+    <div className="col col--4">
+        <ImageCard
+            title="Ethereum"
+            light={useBaseUrl('/img/ethereum_light.svg')}
+            dark={useBaseUrl('/img/ethereum_dark.svg')}
+            url="https://nervos.org/"
+            description="Ethereum is a global, open-source platform for decentralized applications."
+            imagePosition="top"
+        />
+    </div>
+    <div className="col col--4">
+        <ImageCard
+            title="Tendermint Core"
+            light={useBaseUrl('/img/tendermint_light.svg')}
+            dark={useBaseUrl('/img/tendermint_dark.svg')}
+            url="https://nervos.org/"
+            description="The leading BFT engine for building blockchains, powering Axon."
+            imagePosition="top"
+        />
+    </div>
+</div>
+
+## Feedback & Contribute
+
+<div className="row">
+    <div className="col col--4">
+        <ImageCard
+            title="Community"
+            light={useBaseUrl('/img/community_light.svg')}
+            dark={useBaseUrl('/img/community_dark.svg')}
+            url="https://nervos.org/"
+            description="Under construction, please wait"
+            imagePosition="right"
+        />
+    </div>
+    <div className="col col--4">
+        <ImageCard
+            title="Feedback"
+            light={useBaseUrl('/img/feedback_light.svg')}
+            dark={useBaseUrl('/img/feedback_dark.svg')}
+            url="https://nervos.org/"
+            description="Submit and view feedback for"
+            imagePosition="right"
+        />
+    </div>
+    <div className="col col--4">
+        <ImageCard
+            title="Contribute"
+            light={useBaseUrl('/img/contribute_light.svg')}
+            dark={useBaseUrl('/img/contribute_dark.svg')}
+            url="https://nervos.org/"
+            description="Submit request"
+            imagePosition="right"
+        />
+    </div>
+</div>
+
+import Link from '@docusaurus/Link';
+
+<div className="row text-link">
+    <div className="col col--4">
+        <h4>ECOSYSTEM DOCUMENTATION</h4>
+        <Link to="https://nervos.org/">Cosmos SDK Docs</Link>
+        <Link to="https://nervos.org/">Ethereum Docs</Link>
+        <Link to="https://nervos.org/">Tendermint Core Docs</Link>
+    </div>
+    <div className="col col--4">
+        <h4>COMMUNITY</h4>
+        <Link to="https://nervos.org/">Axon Discord Community</Link>
+        <Link to="https://nervos.org/">Axon Commonwealth Forum</Link>
+    </div>
+    <div className="col col--4">
+        <h4>Axon</h4>
+        <Link to="https://nervos.org/">Jobs at Axon</Link>
+    </div>
+</div>
