--- a/docs/about-axon/index.mdx
+++ b/docs/about-axon/index.mdx
@@ -1,5 +1,6 @@
 ---
 slug: /
+title: About Axon
 sidebar_position: 1
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -17,19 +18,21 @@ import ImageCard from '@site/src/components/ImageCard';
 <div className="row">
     <div className="col col--6 margin-bottom--lg">
         <ImageCard
-            title="Developers"
+            title={<div className="subtitle">Developers</div>}
+            alt="Developers"
             light={useBaseUrl('/img/developers_light.svg')}
             dark={useBaseUrl('/img/developers_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Find key information about developing on Axon."
         />
     </div>
     <div className="col col--6 margin-bottom--lg">
         <ImageCard
-            title="Contributers"
+            title={<div className="subtitle">Contributers</div>}
+            alt="Contributers"
             light={useBaseUrl('/img/contributers_light.svg')}
             dark={useBaseUrl('/img/contributers_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Everything you need to know as an Axon contributer."
         />
     </div>
@@ -45,7 +48,7 @@ Get familiar with Axon and explore its main concepts.
             title="Introduction"
             light={useBaseUrl('/img/introduction_light.svg')}
             dark={useBaseUrl('/img/introduction_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Read a high-level over of Axon and its architecture"
             imagePosition="right"
         />
@@ -55,7 +58,7 @@ Get familiar with Axon and explore its main concepts.
             title="Basics"
             light={useBaseUrl('/img/basics_light.svg')}
             dark={useBaseUrl('/img/basics_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Start with the basic concepts of Axon，like accounts and transactions"
             imagePosition="right"
         />
@@ -72,7 +75,7 @@ Check out the docs for the various parts of the Axon stack
             title="Cosmos SDK"
             light={useBaseUrl('/img/cosmos_light.svg')}
             dark={useBaseUrl('/img/cosmos_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="The SDK is the world’s most popular framework for building application-specific blockchains."
             imagePosition="top"
         />
@@ -82,7 +85,7 @@ Check out the docs for the various parts of the Axon stack
             title="Ethereum"
             light={useBaseUrl('/img/ethereum_light.svg')}
             dark={useBaseUrl('/img/ethereum_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Ethereum is a global, open-source platform for decentralized applications."
             imagePosition="top"
         />
@@ -92,7 +95,7 @@ Check out the docs for the various parts of the Axon stack
             title="Tendermint Core"
             light={useBaseUrl('/img/tendermint_light.svg')}
             dark={useBaseUrl('/img/tendermint_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="The leading BFT engine for building blockchains, powering Axon."
             imagePosition="top"
         />
@@ -107,7 +110,7 @@ Check out the docs for the various parts of the Axon stack
             title="Community"
             light={useBaseUrl('/img/community_light.svg')}
             dark={useBaseUrl('/img/community_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Under construction, please wait"
             imagePosition="right"
         />
@@ -117,7 +120,7 @@ Check out the docs for the various parts of the Axon stack
             title="Feedback"
             light={useBaseUrl('/img/feedback_light.svg')}
             dark={useBaseUrl('/img/feedback_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Submit and view feedback for"
             imagePosition="right"
         />
@@ -127,7 +130,7 @@ Check out the docs for the various parts of the Axon stack
             title="Contribute"
             light={useBaseUrl('/img/contribute_light.svg')}
             dark={useBaseUrl('/img/contribute_dark.svg')}
-            url="https://nervos.org/"
+            url="#"
             description="Submit request"
             imagePosition="right"
         />
@@ -139,17 +142,17 @@ import Link from '@docusaurus/Link';
 <div className="row text-link">
     <div className="col col--4">
         <h4>ECOSYSTEM DOCUMENTATION</h4>
-        <Link to="https://nervos.org/">Cosmos SDK Docs</Link>
-        <Link to="https://nervos.org/">Ethereum Docs</Link>
-        <Link to="https://nervos.org/">Tendermint Core Docs</Link>
+        <Link to="#">Cosmos SDK Docs</Link>
+        <Link to="#">Ethereum Docs</Link>
+        <Link to="#">Tendermint Core Docs</Link>
     </div>
     <div className="col col--4">
         <h4>COMMUNITY</h4>
-        <Link to="https://nervos.org/">Axon Discord Community</Link>
-        <Link to="https://nervos.org/">Axon Commonwealth Forum</Link>
+        <Link to="#">Axon Discord Community</Link>
+        <Link to="#">Axon Commonwealth Forum</Link>
     </div>
     <div className="col col--4">
         <h4>Axon</h4>
-        <Link to="https://nervos.org/">Jobs at Axon</Link>
+        <Link to="#">Jobs at Axon</Link>
     </div>
 </div>
