fix: some page styles and send-txs-on-axon pics fix (#22)

--- a/docs/about-axon/index.mdx
+++ b/docs/about-axon/index.mdx
@@ -78,7 +78,7 @@ Check out the docs for the various parts of the Axon stack
             title="Cosmos SDK"
             light={useBaseUrl('/img/cosmos_light.svg')}
             dark={useBaseUrl('/img/cosmos_dark.svg')}
-            url="#"
+            url="https://v1.cosmos.network/sdk"
             description="The SDK is the world’s most popular framework for building application-specific blockchains."
             imagePosition="top"
         />
@@ -88,7 +88,7 @@ Check out the docs for the various parts of the Axon stack
             title="Ethereum"
             light={useBaseUrl('/img/ethereum_light.svg')}
             dark={useBaseUrl('/img/ethereum_dark.svg')}
-            url="#"
+            url="https://ethereum.org/"
             description="Ethereum is a global, open-source platform for decentralized applications."
             imagePosition="top"
         />
@@ -98,7 +98,7 @@ Check out the docs for the various parts of the Axon stack
             title="Tendermint Core"
             light={useBaseUrl('/img/tendermint_light.svg')}
             dark={useBaseUrl('/img/tendermint_dark.svg')}
-            url="#"
+            url="https://tendermint.com/core/"
             description="The leading BFT engine for building blockchains, powering Axon."
             imagePosition="top"
         />
@@ -123,7 +123,7 @@ Check out the docs for the various parts of the Axon stack
             title="Feedback"
             light={useBaseUrl('/img/feedback_light.svg')}
             dark={useBaseUrl('/img/feedback_dark.svg')}
-            url="#"
+            url="https://twitter.com/AxonWeb3"
             description={<></>}
             imagePosition="right"
         />
@@ -148,7 +148,7 @@ Check out the docs for the various parts of the Axon stack
             title="Cosmos SDK Docs"
             light={useBaseUrl('/img/docs_light.svg')}
             dark={useBaseUrl('/img/docs_dark.svg')}
-            url="#"
+            url="https://docs.cosmos.network/"
             description={<></>}
             imagePosition="right"
         />
@@ -158,7 +158,7 @@ Check out the docs for the various parts of the Axon stack
             title="Ethereum Docs"
             light={useBaseUrl('/img/docs_light.svg')}
             dark={useBaseUrl('/img/docs_dark.svg')}
-            url="#"
+            url="https://ethereum.org/en/developers/docs/"
             description={<></>}
             imagePosition="right"
         />
@@ -168,7 +168,7 @@ Check out the docs for the various parts of the Axon stack
             title="Tendermint Core Docs"
             light={useBaseUrl('/img/docs_light.svg')}
             dark={useBaseUrl('/img/docs_dark.svg')}
-            url="#"
+            url="https://docs.tendermint.com/"
             description={<></>}
             imagePosition="right"
         />
