fix: some font size fix (#36)

--- a/docs/about-axon/index.mdx
+++ b/docs/about-axon/index.mdx
@@ -8,6 +8,8 @@ hide_table_of_contents: true
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+<div id="homepage">
+
 ### Axon Documentation
 
 Axon is a scalable and interoperable Ethereum blockchain, built on Proof-of-Stake with fast-finality.
@@ -173,4 +175,6 @@ Check out the docs for the various parts of the Axon stack
             imagePosition="right"
         />
     </div>
+</div>
+
 </div>
